Remove unknown argument

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Ensure browsers are installed
       run: python -m playwright install --with-deps
     - name: Run your tests
-      run: USER_ID=${{ github.event.inputs.user_id }} pytest --tracing=retain-on-failure
+      run: USER_ID=${{ github.event.inputs.user_id }} pytest
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       if: always()
