--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,5 +27,5 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: playwright-traces
+        name: result.json
         path: test-results/
