--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,8 +19,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Ensure browsers are installed
-      run: python -m playwright install --with-deps
+    # - name: Ensure browsers are installed
+    #   run: python -m playwright install --with-deps
     - name: Run your tests
       run: USER_ID=${{ github.event.inputs.user_id }} pytest -s
     - name: Upload artifacts
